examples/programs/valid/addr_lanes_word_bus.sst
.version 1
; Valid word_bus lanes
; Lane encoding: data0=[word:16][site:16], data1=[dir:1][mt:1][pad:14][bus:16]
; mt=1 (word_bus) sets bit 30 of data1 -> data1=0x40000000
; word_bus 0: src=[0] dst=[1]
; sites_with_word_buses: [5,6,7,8,9]

const_lane 0x4000000000000005   ; fwd, word_bus, word 0, site 5, bus 0
const_lane 0x4000000000000006   ; fwd, word_bus, word 0, site 6, bus 0
halt
